Improved CategoryRepository@list
